# flappy-bird-env

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: publish-to-pypi.yml
flappy_bird_env/: __init__.py  __main__.py  background.py  base.py  bird.py  drawable.py  flappy_bird.py  flappy_bird_env.py  movable.py  pipe.py
